clusters/gitlab-cluster/tshnode/tshnode.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: tshnode
  name: tshnode
  namespace: teleport
spec:
  selector:
    matchLabels:
      k8s-app: tshnode
  template:
    metadata:
      labels:
        k8s-app: tshnode
    spec:
      containers:
      - image: amazonlinux
        imagePullPolicy: Always
        name: ssm
        command: ["/bin/bash"]
        args: 
          - -c
          - |
            yum install -y yum-utils ;
            yum-config-manager --add-repo https://rpm.releases.teleport.dev/teleport.repo ;
            yum -y install teleport shadow-utils openssh-clients ;
            /usr/sbin/useradd gitssh ;
            /usr/local/bin/teleport start --roles=node -c /etc/teleport/teleport.yaml
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/teleport-secrets
          name: "auth-token"
          readOnly: true
        - mountPath: /etc/teleport
          name: "config"
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 2
      volumes:
      - name: "auth-token"
        secret:
          secretName: teleport-kube-agent-join-token
      - name: "config"
        configMap:
          name: teleport-ssh-config
