clusters/gitlab-cluster/tshnode/tshnode-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tshnode-network-policy
  namespace: teleport
spec:
  podSelector:
    matchLabels:
      k8s-app: tshnode
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: gitlab-shell
    ports:
    - protocol: TCP
      port: 22
  - to:
    - podSelector:
        matchLabels:
          app: teleport-cluster
    ports:
    - protocol: TCP
      port: 1
      endPort: 32768
